--- a/QuizMasterV2/app/src/main/res/values/colors.xml
+++ b/QuizMasterV2/app/src/main/res/values/colors.xml
@@ -8,4 +8,10 @@ la APP de manera predeterminada  si te posicionas encima del color hexadecimal v
     <color name="white">#FFFFFFFF</color>
     <color name="screenBackground">#88FFEE58</color>
     <color name="screenBackground2">#A6E2EA</color>
+    <color name="light_gray">#F5F5F5</color>
+    <color name="blue">#2196F3</color>
+    <color name="dark_gray">#757575</color>
+    <color name="green">#66BB6A</color>
+    <color name="greenbt">#7A4F81</color>
+
 </resources>
