--- a/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
+++ b/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#B670C2"
+        android:background="#DDBBE3"
         android:padding="16dp">
 
         <TextView
@@ -17,32 +17,32 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="24dp"
-            android:text="Points: 0"
-            android:textColor="#6A1B9A"
-            android:textSize="24sp"
             android:fontFamily="sans-serif"
+            android:text="Points: 0"
+            android:textColor="#28043E"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
 
         <TextView
             android:id="@+id/PreguntaText"
             android:layout_width="393dp"
-            android:layout_height="154dp"
+            android:layout_height="100dp"
             android:layout_below="@id/puntaje"
             android:layout_marginTop="7dp"
             android:layout_marginBottom="24dp"
             android:background="#673AB7"
+            android:fontFamily="sans-serif"
             android:text=""
             android:textAlignment="textStart"
             android:textColor="@color/white"
             android:textSize="22sp"
-            android:fontFamily="sans-serif"
             android:textStyle="bold" />
 
         <RadioGroup
             android:id="@+id/opcionesRadioGroup"
             android:layout_width="395dp"
-            android:layout_height="217dp"
+            android:layout_height="374dp"
             android:layout_below="@id/PreguntaText"
             android:layout_marginTop="0dp"
             android:fontFamily="sans-serif"
@@ -52,11 +52,12 @@
                 android:id="@+id/opcion1RadioButton"
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
+                android:layout_marginBottom="40dp"
                 android:background="@drawable/radio_button_selector"
+                android:fontFamily="sans-serif"
                 android:text=""
                 android:textColor="@color/white"
                 android:textColorLink="@color/greenbt"
-                android:fontFamily="sans-serif"
                 android:textSize="18sp" />
 
 
@@ -65,12 +66,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="62dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="40dp"
                 android:background="@drawable/radio_button_selector"
                 android:buttonTint="@color/blue"
+                android:fontFamily="sans-serif"
                 android:text=""
                 android:textColor="@color/white"
                 android:textColorLink="@color/greenbt"
-                android:fontFamily="sans-serif"
                 android:textSize="18sp" />
 
             <RadioButton
@@ -78,12 +80,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="62dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="40dp"
                 android:background="@drawable/radio_button_selector"
                 android:buttonTint="@color/white"
+                android:fontFamily="sans-serif"
                 android:text=""
                 android:textColor="@color/white"
                 android:textColorLink="@color/greenbt"
-                android:fontFamily="sans-serif"
                 android:textSize="18sp" />
 
         </RadioGroup>
@@ -94,15 +97,15 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/opcionesRadioGroup"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="75dp"
             android:background="#1976D2"
+            android:fontFamily="sans-serif"
             android:paddingStart="24dp"
             android:paddingTop="12dp"
             android:paddingEnd="24dp"
             android:paddingBottom="12dp"
             android:text="@string/previous"
             android:textColor="#FFFFFF"
-            android:fontFamily="sans-serif"
             android:textSize="20sp" />
 
     </RelativeLayout>
