--- a/QuizMasterV2/app/src/main/res/values/colors.xml
+++ b/QuizMasterV2/app/src/main/res/values/colors.xml
@@ -12,6 +12,6 @@ la APP de manera predeterminada  si te posicionas encima del color hexadecimal v
     <color name="blue">#2196F3</color>
     <color name="dark_gray">#757575</color>
     <color name="green">#66BB6A</color>
-    <color name="greenbt">#7A4F81</color>
+    <color name="greenbt">#8E24AA</color>
 
 </resources>
