--- a/QuizMasterV2/app/src/main/res/layout/activity_result.xml
+++ b/QuizMasterV2/app/src/main/res/layout/activity_result.xml
@@ -7,12 +7,18 @@
 
 
     <TextView
-        android:id="@+id/resultadosTextView"
-        android:layout_width="match_parent"
-        android:layout_height="164dp"
-
-        android:text="Datos base de datos"
-        android:textSize="18sp"
-        tools:ignore="NotSibling" />
+        android:id="@+id/textViewResult"
+        android:layout_width="373dp"
+        android:layout_height="268dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="center"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginBottom="16dp"
+        android:gravity="center"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
 
 </RelativeLayout>
