--- a/QuizMasterV2/app/src/main/res/layout/activity_result.xml
+++ b/QuizMasterV2/app/src/main/res/layout/activity_result.xml
@@ -8,14 +8,14 @@
 
     <TextView
         android:id="@+id/textViewResult"
-        android:layout_width="373dp"
-        android:layout_height="268dp"
+        android:layout_width="match_parent"
+        android:layout_height="715dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_gravity="center"
         android:layout_marginStart="0dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="38dp"
+        android:layout_marginEnd="0dp"
         android:layout_marginBottom="16dp"
         android:gravity="center"
         android:textColor="@android:color/black"
